fix: footer content layout going under main content layout.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanila Css</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
@@ -20,7 +20,7 @@
       </div>
     </div>
     <!-- Background color effect end -->
-    
+
     <!-- Main Content Section start -->
     <div class="glass-layer">
       <nav class="container">
@@ -37,207 +37,198 @@
             <a href="#">About</a>
             <a href="#">Cash Score</a>
             <button class="btn-one">
-              <span>
-                Get Started
-              </span>
+              <span> Get Started </span>
               <i class="fa-solid fa-arrow-right"></i>
             </button>
           </div>
         </div>
       </nav>
 
-        <main>
-          <section>
-            <div class="container">
-              <p class="first-content">
-                Empowering business to serve more customers, build better
-                products, and make smarter decisions with financial transaction
-                data.
-              </p>
-              <hr />
-            </div>
-          </section>
-
-          <section>
-            <div class="container">
-              <div class="flex-content">
-                <div class="flex-item1">
-                  <p>
-                    The Future of Financial<br />
-                    Services is Here
-                  </p>
-                </div>
-
-                <div class="flex-item2">
-                  <p class="paragrap-text">
-                    with the rising of open banking.Consumers can connect<br />
-                    account and share their financial histories quickly and
-                    easily.<br />
-                    Prism data help you understand these histories and turn them
-                    into innovative products and experiences.
-                  </p>
-                </div>
-              </div>
-              <hr />
-            </div>
-          </section>
-
-          <section>
-            <div class="container">
-              <div class="flex-content">
-                <div class="flex-item1">
-                  <p>The Forefront of <br />Finacial inclusion</p>
-                </div>
-
-                <div class="flex-item2">
-                  <p class="paragraph-text">
-                    with the rising of open banking.Consumers can connect<br />
-                    account and share their financial histories quickly and
-                    easily.<br />
-
-                    Prism data help you understand these histories and turn them
-                    into innovative products and experiences.
-                  </p>
-
-                  <p class="paragraph-text">
-                    with the rising of open banking.Consumers can connect<br />
-                    account and share their financial histories quickly and
-                    easily.<br />
-                    Prism data help you understand these histories and turn them
-                    into innovative products and experiences.
-                  </p>
-
-                  <p class="paragraph-text">
-                    with the rising of open banking.Consumers can connect<br />
-                    account and share their financial histories quickly and
-                    easily.<br />
-                    Prism data help you understand these histories and turn them
-                    into innovative products and experiences.
-                  </p>
-                </div>
-              </div>
-              <hr />
-            </div>
-          </section>
-
-          <section>
-            <div class="div-container">
-              <div class="">
-                <div class="flex-content">
-                  <div class="flex-object1">
-                    <p>What will you build with Prism Data</p>
-                  </div>
-                  <div class="flex-object2">
-                    <div class="btn-two">
-                      <div>
-                        Get Started
-                      </div>
-                      <div class="flex-btn-obj">
-                        <i class="fa-solid fa-arrow-right"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <section class="cover">
-            <div class="container">
-              <div class="flex-content">
-                <div class="flex-item1">
-                  <p>Careers</p>
-                </div>
-
-                <div class="flex-item2">
-                  <p class="paragrap-text">
-                    with the rising of open banking.Consumers can connect<br />
-                    account and share their financial histories quickly and
-                    easily.<br />
-                    Prism data help you understand these histories and turn them
-                    into innovative products and experiences.
-                  </p>
-                </div>
-              </div>
-              <hr/>
-              <p class="inner-text">
-                Apply for a role at Prism Data by emailing careers @prism
-                data.com
-              </p>
-              <hr />
-            </div>
-          </section>
-
-          
-            </main>
+      <main>
+        <section>
+          <div class="container">
+            <p class="first-content">
+              Empowering business to serve more customers, build better
+              products, and make smarter decisions with financial transaction
+              data.
+            </p>
+            <hr />
           </div>
-          <!-- Main Content Section End -->
+        </section>
 
-          <!-- Footer start -->
-          <section>
-            <div class="container-one">
+        <section>
+          <div class="container">
+            <div class="flex-content">
+              <div class="flex-item1">
+                <p>
+                  The Future of Financial<br />
+                  Services is Here
+                </p>
+              </div>
+
+              <div class="flex-item2">
+                <p class="paragrap-text">
+                  with the rising of open banking.Consumers can connect<br />
+                  account and share their financial histories quickly and
+                  easily.<br />
+                  Prism data help you understand these histories and turn them
+                  into innovative products and experiences.
+                </p>
+              </div>
+            </div>
+            <hr />
+          </div>
+        </section>
+
+        <section>
+          <div class="container">
+            <div class="flex-content">
+              <div class="flex-item1">
+                <p>The Forefront of <br />Finacial inclusion</p>
+              </div>
+
+              <div class="flex-item2">
+                <p class="paragraph-text">
+                  with the rising of open banking.Consumers can connect<br />
+                  account and share their financial histories quickly and
+                  easily.<br />
+
+                  Prism data help you understand these histories and turn them
+                  into innovative products and experiences.
+                </p>
+
+                <p class="paragraph-text">
+                  with the rising of open banking.Consumers can connect<br />
+                  account and share their financial histories quickly and
+                  easily.<br />
+                  Prism data help you understand these histories and turn them
+                  into innovative products and experiences.
+                </p>
+
+                <p class="paragraph-text">
+                  with the rising of open banking.Consumers can connect<br />
+                  account and share their financial histories quickly and
+                  easily.<br />
+                  Prism data help you understand these histories and turn them
+                  into innovative products and experiences.
+                </p>
+              </div>
+            </div>
+            <hr />
+          </div>
+        </section>
+
+        <section>
+          <div class="div-container">
+            <div class="">
               <div class="flex-content">
-                <div class="flex-item1">
-                  <i class="fa-solid fa-bolt"></i>
+                <div class="flex-object1">
+                  <p>What will you build with Prism Data</p>
                 </div>
-
-                <div class="flex-item2">
-                  <div class="link">
-                    <p>About</p>
-                    <p>Cashscore</p>
-                    <p>Careers</p>
-                  </div>
-                  <div class="div-paragraph">
-                    <p>bisolaaminatalli@gmail.com</p>
-                  </div>
-
-                  <div class="icon-flex">
-                    <div class="flex-term">
-                      <div class="item-a">
-                        <i class="fa-brands fa-twitter"></i>
-                      </div>
-
-                      <div class="item-b">
-                        <small>Twitter</small>
-                      </div>
+                <div class="flex-object2">
+                  <div class="btn-two">
+                    <div>Get Started</div>
+                    <div class="flex-btn-obj">
+                      <i class="fa-solid fa-arrow-right"></i>
                     </div>
-
-                    <div class="flex-term">
-                      <div class="item-a">
-                        <i class="fa-brands fa-linkedin"></i>
-                      </div>
-                      <div class="item-b">
-                        <small>linkedn </small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="flex-item3">
-                  <p class="">Sign up for our members</p>
-
-                  <div>
-                    <p>Privacy Policy Terms of Live</p>
-                  </div>
-
-                  <div class="input-button">
-                    <span class="piper"></span>
-                    <input type="email" placeholder="Email Adress">
-                    <button class="btn-three">Start</button>
-                  </div>
-
-                  <div>
-                    <small>&#169; 2021 Portal Cart Inc. All Rights Reserverd
-                    </small>
                   </div>
                 </div>
               </div>
             </div>
-              </section>
+          </div>
+        </section>
 
+        <section class="cover">
+          <div class="container">
+            <div class="flex-content">
+              <div class="flex-item1">
+                <p>Careers</p>
+              </div>
 
-          <script
-            src="https://kit.fontawesome.com/22ffd3b04d.js"
-            crossorigin="anonymous"></script>
-        </body>
-      </html>
+              <div class="flex-item2">
+                <p class="paragrap-text">
+                  with the rising of open banking.Consumers can connect<br />
+                  account and share their financial histories quickly and
+                  easily.<br />
+                  Prism data help you understand these histories and turn them
+                  into innovative products and experiences.
+                </p>
+              </div>
+            </div>
+            <hr />
+            <p class="inner-text">
+              Apply for a role at Prism Data by emailing careers @prism data.com
+            </p>
+            <hr />
+          </div>
+        </section>
+      </main>
+          <!-- Footer start -->
+    <section>
+      <div class="container-one">
+        <div class="flex-content">
+          <div class="flex-item1">
+            <i class="fa-solid fa-bolt"></i>
+          </div>
+
+          <div class="flex-item2">
+            <div class="link">
+              <p>About</p>
+              <p>Cashscore</p>
+              <p>Careers</p>
+            </div>
+            <div class="div-paragraph">
+              <p>bisolaaminatalli@gmail.com</p>
+            </div>
+
+            <div class="icon-flex">
+              <div class="flex-term">
+                <div class="item-a">
+                  <i class="fa-brands fa-twitter"></i>
+                </div>
+
+                <div class="item-b">
+                  <small>Twitter</small>
+                </div>
+              </div>
+
+              <div class="flex-term">
+                <div class="item-a">
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>
+                <div class="item-b">
+                  <small>linkedn </small>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex-item3">
+            <p class="">Sign up for our members</p>
+
+            <div>
+              <p>Privacy Policy Terms of Live</p>
+            </div>
+
+            <div class="input-button">
+              <span class="piper"></span>
+              <input type="email" placeholder="Email Adress" />
+              <button class="btn-three">Start</button>
+            </div>
+
+            <div>
+              <small>&#169; 2021 Portal Cart Inc. All Rights Reserverd </small>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    </div>
+    <!-- Main Content Section End -->
+
+    <script
+      src="https://kit.fontawesome.com/22ffd3b04d.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
